# libcfortuna

./: .clang-format  .gitignore  CMakeLists.txt  README.md  accumulator.c  accumulator.h  aes-accumulator.c  aes-accumulator.h  aes-generator.c  aes-generator.h  hexdump.c  hexdump.h  main.c  package-lock.cmake  pool.c  pool.h  psnip_timespec.h  u128.h
.github/workflows/: build-test.yml  clang-format.yml  reformat-clang-format.yml  stale.yml
chacha20/: CMakeLists.txt  chacha20-accumulator.c  chacha20-accumulator.h  chacha20-generator.c  chacha20-generator.h  main1.c
cmake/: DefaultConfig.cmake
shad256/: CMakeLists.txt  shad256.c  shad256.h
tests/: CMakeLists.txt  aes-accumulator.test.c  aes-generator.test.c  main.c  shad256-pool.test.c  tests.h
tests/chacha20/: accumulator.test.c  generator.test.c
